# mut

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  testing-session-prompt.txt
.claude/: recording-state.json
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md
docs/plans/: 2026-01-16-ai-analyzer-implementation.md  2026-01-16-mut-cli-design.md  2026-01-16-mut-implementation-phase1.md  2026-01-16-scrcpy-service-implementation.md  2026-01-17-ai-analysis-optimization-design.md  2026-01-17-mut-enhanced-actions-conditionals.md  2026-01-17-mut-implementation-phase2-recording.md  2026-01-17-mut-implementation-phase3-ai-analysis.md  2026-01-17-mut-interactive-html-reports.md  2026-01-17-recording-folder-restructure-design.md  2026-01-17-recording-folder-restructure.md  2026-01-17-verbose-logging-design.md  2026-01-17-verbose-logging.md  2026-01-18-intelligent-test-resilience-design.md  2026-01-18-recording-message-improvement-design.md  2026-01-18-report-action-screenshots-design.md  2026-01-18-report-gesture-visualization-design.md  2026-01-18-report-gesture-visualization-impl.md  2026-01-18-swipe-scroll-to-suggestion-design.md  2026-01-18-test-run-improvements-design.md  2026-01-19-cli-live-output-design.md  2026-01-19-injection-based-recording-design.md  2026-01-19-video-based-screenshots.md  (+1 more)
mobileuitest/: __init__.py  __main__.py  cli.py
muit/: __main__.py  cli.py
mut/: __main__.py  cli.py
mutcli/: __init__.py  __main__.py  cli.py
pymut/: __main__.py  cli.py
tests/: __init__.py  test_adb_state_monitor.py  test_ai_analyzer.py  test_ai_integration.py  test_ai_recovery.py  test_analysis_io.py  test_cli.py  test_config.py  test_device_controller.py  test_executor.py  test_frame_extractor.py  test_integration.py  test_logging_setup.py  test_models.py  test_parser.py  test_preview_server.py  test_recorder.py  test_report.py  test_run_folders.py  test_scrcpy_service.py  test_screenshot_saver.py  test_step_analyzer.py  test_step_collapsing.py  test_step_verifier.py  test_touch_monitor.py  test_typing_detector.py  test_ui_element_parser.py  test_verification_suggester.py  test_yaml_generator.py
(+56 files in other folders)
